# pollcoro

./: .clang-format  .clang-tidy  .envrc  .gitignore  CMakeLists.txt  Justfile  LICENSE  README.adoc
.direnv/: flake-profile-1-link
cmake/: pollcoro-config.cmake.in
examples/: CMakeLists.txt  allocator.cc  c_interop.c  c_interop.h  c_interop_impl.cc  cc17.cc  custom_awaitable.cc  cxx_cppcoro_interop.cc  exceptions.cc  fib.cc  generator.cc  generic.cc  interop_asio.cc  interop_cppcoro.cc  interop_resumable.cc  map.cc  modules.cc  mutex.cc  pipelines.cc  reference.cc  stream.cc  thread_callback.cc  timer_sleep.cc  wait_combinators.cc
examples/patches/: cppcoro.patch
include/pollcoro/: allocator.hpp  asio.hpp  awaitable.hpp  block_on.hpp  chain.hpp  co_awaitable.hpp  concept.hpp  concepts.hpp  empty.hpp  enumerate.hpp  export.hpp  flatten.hpp  fold.hpp  gen.hpp  gen_awaitable.hpp  gen_next.hpp  generator.hpp  generic.hpp  is_blocking.hpp  iter.hpp  last.hpp  make_pollable.hpp  make_resumable.hpp  map.hpp  next.hpp  nth.hpp  pending.hpp  pollable_state.hpp  range.hpp  ready.hpp  ref.hpp  repeat.hpp  resumable.hpp  single_event.hpp  skip.hpp  skip_while.hpp  sleep.hpp  stream.hpp  stream_awaitable.hpp  stream_from.hpp  (+11 more)
include/pollcoro/detail/: promise.hpp
nix/: flake.nix
src/: allocator.cppm  awaitable.cppm  block_on.cppm  chain.cppm  co_awaitable.cppm  detail_promise.cppm  empty.cppm  enumerate.cppm  flatten.cppm  fold.cppm  generic.cppm  is_blocking.cppm  iter.cppm  last.cppm  map.cppm  mutex.cppm  next.cppm  nth.cppm  pending.cppm  pollcoro.cppm  range.cppm  ready.cppm  ref.cppm  repeat.cppm  resumable.cppm  shared_mutex.cppm  single_event.cppm  skip.cppm  skip_while.cppm  sleep.cppm  stream.cppm  stream_awaitable.cppm  sync_iter.cppm  take.cppm  take_while.cppm  task.cppm  wait_all.cppm  wait_first.cppm  waker.cppm  window.cppm  (+2 more)
